@@ -4005,6 +4005,9 @@ build
     This may be set to zero if priority inheritance is disabled OR if you
     are only using semaphores as mutexes (only one holder) OR if no more
     than two threads participate using a counting semaphore.
+    If defined, then this should be a relatively large number because this
+    is the total number of counts on the total number of semaphores (like
+    64 or 100).
   </li>
   <li>
     <code>CONFIG_SEM_NNESTPRIO</code>: If priority inheritance is enabled,
@@ -4012,6 +4015,8 @@ build
     1) than can be waiting for another thread to release a count on a semaphore.
     This value may be set to zero if no more than one thread is expected to
     wait for a semaphore.
+    If defined, then this should be a relatively small number because this the
+    number of maximumum of waiters on one semaphore (like 4 or 8).
   </li>
   <li>
     <code>CONFIG_FDCLONE_DISABLE</code>: Disable cloning of all file descriptors
